Delete resource by index from model, instead of selection index

Deleting a resource with "Show deleted resources" disabled
will update the proxy model and next index in selection
now points at wrong item, collect resource ids first,
and then fetch resource index from model by id instead.

BUG:439594